# fluffy-octo-computing-machine-savings-tracker

./: .gitignore  .pre-commit-config.yaml  JOURNAL.md  README.md  pyproject.toml
.github/workflows/: ci.yml
savings_challenge/: challenge.py
src/challenge/: challenge.py  challenge_manager.py  challenge_service.py
tests/: test_challenge.py  test_challenge_manager.py  test_challenge_service.py
