[tool.poetry]
name = "savings-challenge"
version = "0.1.0"
description = ""
authors = ["Kenneth Chua <kennethchua474@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"


[tool.poetry.group.dev.dependencies]
pytest = "^9.1.1"
ruff = "^0.15.20"
mypy = "^2.1.0"
pre-commit = "^4.6.0"

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B"]

[tool.mypy]
python_version = "3.12"
strict = true

[tool.pytest.ini_options]
testpaths = ["tests"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
